--- a/megablog/.gitignore
+++ b/megablog/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# ignore real env file
+.env
+# keep the sample env file
+!.env.sample
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +26,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
